apps/base/key-sync/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: key-sync
  name: key-sync
  namespace: key-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: key-sync
  template:
    metadata:
      labels:
        app: key-sync
    spec:
      containers:
        - name: key-sync
          image: lscr.io/linuxserver/openssh-server
          ports:
            - containerPort: 2222
          resources:
            requests:
              memory: "250Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /key-sync
              name: key-sync-claim
      volumes:
        - name: key-sync-claim
          persistentVolumeClaim:
            claimName: key-sync-claim
        - name: key-sync-secret
          secret:
            secretName: key-sync-secret
