apps/base/key-sync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: key-sync
  name: key-sync
  namespace: key-sync
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 2222
  selector:
    app: key-sync
