apps/base/key-sync/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: key-sync
  namespace: key-sync
spec:
  rules:
    - host: key-sync.nairvarun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: key-sync
                port:
                  number: 22
