apps/base/key-sync/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: key-sync-ingressroute
  namespace: key-sync
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: openssh-service-nodeport
          port: 2222
